tests/final/expect/15__diag__malformed_pp_gnu_comma_vaargs_chain_no_crash.diag
Diagnostics:
/Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/probes/diagnostics/15__probe_diag_malformed_pp_gnu_comma_vaargs_chain_no_crash.c:6:12: error: GNU ', ##__VA_ARGS__' extension is not supported
Error: preprocessing failed
/Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/probes/diagnostics/15__probe_diag_malformed_pp_gnu_comma_vaargs_chain_no_crash.c:6:12: error: GNU ', ##__VA_ARGS__' extension is not supported
/Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/probes/diagnostics/15__probe_diag_malformed_pp_gnu_comma_vaargs_chain_no_crash.c:6:12: error: GNU ', ##__VA_ARGS__' extension is not supported
